see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^^ -> Change
- -> Removed
! -> Note

30-Jan-2012 Christophe Demko
 # [#27885] TinyMCE settings in SQL don't reflect recent changes in options. (Andrea Tarr, Elin Waring)

30-Jan-2012 Jean-Marie Simonet
 [#27818] Update 1.7 strings to 2.5. Thanks Christophe

30-Jan-2012 Mark Dexter
 # [#27887] Extension Manager: Database does not fix update problem
 # [#27886] An unpublished linked contact leads to articles not being displayed.
 # [#27895] Version Number Module Not Assigned to Menus
 # [#27893] New version module interferes with license notice in Hathor
 # [#27700] com_redirect redirects should use 301 redirect, not 303
 # [#27864] User profile page does not HTML escape the user's name
 # [#27896] mod_search head search link title not escaped

29-Jan-2012 Jean-Marie Simonet
 # [#27880] 'Please first make a selection from the lis't: Huge error on 40+ sites. Thanks Rouven.
 + [#27844] Version Module for Admin to show Joomla version in Footer admin Template
 # [#27842] Batch processing broken. Thanks Michael and Christophe
 $ Correcting parsing errors in bn-BD.ini

-------------------- 2.5.0 Stable Release [24-Jan-2012] ------------------


22-Jan-2012 Christophe Demko
 # [#27810] *Strict error when creating/editing a Content Language

22-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files ur-PK, cs-CZ. Adding ml-IN installation
 # [#27808] float of full article image is not affected at all. Thanks Ofer
 # Correcting encoding ml-IN.xml
 # [#27812] image float issues. Thanks Andrea.
 # [#27791] SQL Server - Cannot access Smart Search Filter Edit View. Thanks Michael