@@ -173,6 +173,7 @@ Tamil India (ta-IN) - Ilagnayeru 'MIG' Manickam, Elango Samy Manim
 Turkish (tr-TR) - Joomla! Turkiye - Ümit Kenan Gönüllü
 Ukrainian (uk-UA) - Ukrainian Translation Team - Denys Nosov
 Urdu Pakistan (ur-PK) - Basim
+Uyghur China (ug-CN) - Uyghur Translation Team - Ekber Tursun, Osmanjan Hasen, Abdulla Bisir
 
 
 
