@@ -1,0 +1,224 @@
+; Joomla! Project
+; Copyright (C) 2005 - 2012 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEPS_TITLE="قاچىلاش باسقۇچى"
+INSTL_STEP_1_LABEL="1: تىل تاللاش"
+INSTL_STEP_2_LABEL="2: قاچىلاش ئالدىدىكى تەكشۈرۈش"
+INSTL_STEP_3_LABEL="3: يۇمشاق دېتال ئ‍ىجازەتنامىسى"
+INSTL_STEP_4_LABEL="4: ساندان"
+INSTL_STEP_5_LABEL="5: FTP نى تەڭشەش"
+INSTL_STEP_6_LABEL="6: سەپلەش"
+INSTL_STEP_7_LABEL="7: تامام"
+
+;Language view
+INSTL_SELECT_LANGUAGE_TITLE="تىل تاللاش"
+INSTL_SELECT_LANGUAGE_DESC="تۆۋەندىكى تىزىملىكتىن !Joomla قاچىلاش جەريانىدا ئىشلىتىدىغان تىلنى تاللاڭ:"
+INSTL_LANGUAGE_TITLE="تىل تاللاش"
+INSTL_WARNJAVASCRIPT="ئاگاھلاندۇرۇش: joomla! نىڭ توغرا قاچىلىنىشىغا كاپالەتلىك قىلىش ئۈچۈن، سىز چوقۇم تور كۆرگۈچنىڭ javascript قوللىشىنى ئېچىۋېتىشىڭىز كېرەك! "
+INSTL_WARNJSON="Joomla قاچالاشنى تاماملاش ئۈچۈن، سىزنىڭ php مۇھىتىڭىز JSON قوللىشىنى ئېچىۋېتىشىڭىزگە ئېھتىياجلىق!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="قاچىلاش ئالدىدىكى تەكشۈرۈش"
+INSTL_PRECHECK_FOR_VERSION="قاچىلاش ئالدىدىكى تەكشۈرۈش %s："
+INSTL_PRECHECK_DESC="تىزمىدىكى بەلگىسى <strong class="_QQ_"red"_QQ_">ياق</strong> بولغان بىر مۇلازىمېتىر سەپلىمە پارامېترىنى ئوڭشاڭ. ئەگەر توغرا سەپلەنمىسە قاچىلىشىڭىز مەغلۇپ بولۇشى مۇمكىن."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="تەۋسىيە قىلىنغان تەڭشىكى"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="joomla نىڭ ياخشى بېجىرىلىشىگە كاپالەتلىق قىلىش ئۈچۈن، تۆۋەندىكى php تەڭشىكىنى تەۋىسسىيە قىلىمىز. <br />گەرچە سىزنىڭ سەپلىمىڭىز تەۋىسسىيە قىلغان بىلەن پۈتۈنلەي ئوخشاش بولمىسىمۇ، !Joomla يەنىلا نورمال خىزمەت قىلالايدۇ."
+INSTL_PRECHECK_DIRECTIVE="تەڭشەش تۈرلىرى"
+INSTL_PRECHECK_RECOMMENDED="تەۋسىيەلىك تەڭشەك"
+INSTL_PRECHECK_ACTUAL="ئەمەلىي تەڭشەك"
+
+; Database view
+INSTL_DATABASE="ساندان تەڭشىكى"
+INSTL_DATABASE_HOST_DESC="بۇ تەڭشەك ئادەتتە &quot;localhost&quot; بولىدۇ"
+INSTL_DATABASE_HOST_LABEL="باش ئاپپارات نامى"
+INSTL_DATABASE_NAME_DESC="بەزى باش ئاپپاراتلاردا ھەر بىر تور بېكىتىدە پەقەت بىر ساندان نامى بولۇشقا يول قويىدۇ، بۇ خىل ئەھۋالدا ئوخشىمىغان سانلىق مەلۇمات جەدۋىلى ئالدى قوشۇلغۇچىسى ئارقىلىق ئوخشىمىغان !Joomla بېكەتلىرىنى قاچىلاشقا بولىدۇ."
+INSTL_DATABASE_NAME_LABEL="ساندان نامى"
+INSTL_DATABASE_OLD_PROCESS_DESC="بۇرۇن قاچىلانغان joomla! قاچىلاش جەريانىدا زاپاسلىنىدۇ"
+INSTL_DATABASE_OLD_PROCESS_LABEL="بۇرۇنقى سانلىق مەلۇماتلارنى بىر تەرەپ قىلىش"
+INSTL_DATABASE_PASSWORD_DESC="بېكەت بىخەتەرلىكى ئۈچۈن mysql ساندانىغا پارول بېكىتىڭ"
+INSTL_DATABASE_PASSWORD_LABEL="پارول"
+INSTL_DATABASE_PREFIX_DESC="ساندانغا بىر ئالدى قوشۇلغۇچى تاللاڭ ياكى <b>تەسادىپىي ھاسىل قىلىنغان ئالدى قوشۇلغۇچى</b> ئىشلىتىڭ. ئىدېيال ئالدى قوشۇلغۇچى بولسا: تۆت ھەرپ-بەلگە ئۇزۇنلۇقتا، پەقەت ھەرپنىلا ئۆز ئىچىگە ئالغان ھەمدە ئاستى سىزىق ئارقىلىق ئاخىرلاشقان بولىدۇ. &quot;bak_&quot; لارنى ئىشلەتمەڭ، چۈنكى ئالدى قوشۇلغۇچى كۆپ ھاللاردا سانلىق مەلۇمات جەدۋىلىنى زاپاسلاشقا ئىشلىتىلىدۇ."
+INSTL_DATABASE_PREFIX_LABEL="جەدۋەل ئالدى قوشۇلغۇچىسى"
+INSTL_DATABASE_TYPE_DESC="بۇ بەلكىم &quot;MySQLi&quot; بولۇشى مۇمكىن"
+INSTL_DATABASE_TYPE_LABEL="ساندان تىپى"
+INSTL_DATABASE_PREFIX_MSG="ساندان ئالدى قوشۇلغۇچىسى چوقۇم ھەرپ بىلەن باشلانغان بولۇشى كېرەك، ئارقىغا پەقەت ھەرپلەر ئۇلىنىشى، ئاستى سىزىق بىلەن ئاخىرلىشىشى كېرەك"
+INSTL_DATABASE_USER_DESC="مەسىلەن &quot;root&quot; ، ياكى مۇلازىمېتىر بىلەن تەمىنلىگۈچى سودىگەر سىزگە تەمىنلىگەن ساندان قوللانغۇچى نامى"
+INSTL_DATABASE_USER_LABEL="قوللانغۇچى"
+INSTL_DATABASE_TITLE="ئۇلاش تەڭشىكى"
+INSTL_DATABASE_DESC="<p>!Joomla تور بېكىتىنىڭ سانلىق مەلۇماتلىرىنىڭ ھەممىسى سانداندا ساقلىنىدۇ. بۇ يەردە تولدۇرۇلىدىغاننىڭ ھەممىسى ساندان قۇرۇشتا زۆرۈر بولغان ئۇچۇرلاردۇر. </p><p>ئەگەر سىز نۆۋەتتە !Joomla نى يىراق مۇساپىلىك باش ئاپپارات (مەۋھۇم باش ئاپپارات) قا قاچىلاۋاتقان بولسىڭىز، باش ئاپپارات تەمىنلىگۈچى سودىگەر تەمىنلىگەن مۇناسىۋەتلىك ماتېرىياللارغا ئېھتىياجلىق بولىسىز. </p><p>بەزى باش ئاپپاراتلار (مۇلازىمېتىر) سىزنىڭ  !Joomla نى قاچىلاشتىن بۇرۇن سانداننى قۇرۇپ تەييارلىشىڭىزنى تەلەپ قىلىدۇ. ئەگەر سىز  &quot;ساندانغا ئۇلاشقا بولمىدى&quot; دېگەن ئۇچۇرنى كۆرسىڭىز، ئۇ ھالدا سىز تولدۇرغان قوللانغۇچى نامى ۋە پارولنىڭ توغرا بولغان بولمىغانلىقىنى تەكشۈرۈپ كۆرۈڭ؛ ئەگەر ئۇلار توغرا بولسىمۇ يەنىلا بۇ خاتالىق ئۇچىرى كۆرۈلسە، باش ئاپپارات تەمىنلىگۈچى سودىگەر بىلەن ئالاقىلىشىڭ، ئۇلاردىن !Joomla نى قاچىلاشتىن بۇرۇن سانداننى قۇرۇشۇم كېرەكمۇ دەپ سوراڭ. </p><p>ئالدىنقى قېتىم قاچىلاشتىن ھاسىل بولغان سانلىق مەلۇمات ياكى كونا تور بېكىتىدىكى سانلىق مەلۇماتلارنى قانداق بىر تەرەپ قىلىشتا ناھايىتى ئېھتىياتچان بولۇڭ!</p>"
+
+;Filesystem view
+INSTL_AUTOFIND_FTP_PATH="FTP يولىنى ئاپتوماتىك تەكشۈرۈش"
+INSTL_FTP="FTP تەڭشىكى"
+INSTL_FTP_DESC="<p>بەزى مۇلازىمېتىرلاردا FTP دەلىللەش ئۇچۇرىنى تەمىنلىگەندىن كېيىن ئاندىن قاچىلاشنى تاماملاشقا بولىدۇ. ئەگەر بۇ ئۇچۇرلار تەمىنلەنمەي سىزنىڭ قاچىلىشىڭىزدىن مەسىلە كۆرۈلۈپ داۋاملاشتۇغىلى بولمىسا، باش ئاپپاراتىڭىزغا بۇ ئۇچۇرلارنى چوقۇم تولدۇرۇش كېرەك ياكى ئەمەسلىكىنى تەكشۈرۈپ جەزملەشتۈرۈڭ. </p><p>بىخەتەرلىك نۇقتىسىدىن ئېيتقاندا، ئەڭ ياخشىسى !Joomla قاچىلاش مۇندەرىجىسىگە يەككە ھالدا FTP ھېسابات نومۇرى تۇرغۇزۇڭ، بۇ ھېسابات نومۇرى ئارقىلىق ھەممە بېكەتكە زىيارەت قىلغىلى بولمىسۇ. سىزنىڭ باش ئاپپارات تەمىنلىگۈچى سودىگىرىڭىز سىزگە بۇ جەھەتتە ياردەم بېرەلەيدۇ. </p><p><b>دىققەت: </b> ئەگەر سىز Windows سىستېمىسىدا Joomla، FTPئۇچۇرىنى قاچىلىغان بولسىڭىز، ئۇ ھالدا بۇلار <strong>زۆرۈر ئەمەس</strong>.</p>"
+INSTL_FTP_ENABLE_LABEL="FTP نى قوزغىتىش"
+INSTL_FTP_HOST_LABEL="FTP باش ئاپپاراتى"
+INSTL_FTP_PASSWORD_LABEL="FTP پارولى"
+INSTL_FTP_PORT_LABEL="FTP ئېغىزى"
+INSTL_FTP_ROOT_LABEL="FTP غول مۇندەرىجىسى"
+INSTL_FTP_SAVE_LABEL="FTP پارولىنى ساقلاش"
+INSTL_FTP_TITLE="FTP تەڭشىكى (<strong class="_QQ_"red"_QQ_">تاللاش تۈرى - كۆپ ساندىكى قوللانغۇچىلار بۇ باسقۇچتىن ئاتلاپ ئۆتۈپ كەتسە بولىدۇ - «كېيىنكى باسقۇچ» نى چېكىپ ئاتلاپ ئۆتۈپ كېتىڭ</strong>)"
+INSTL_FTP_USER_LABEL="FTP قوللانغۇچى نامى"
+INSTL_SITE_NAME_LABEL="تور بېكەت نامى"
+INSTL_VERIFY_FTP_SETTINGS="FTP سەپلىمىسنى دەلىللەش"
+INSTL_FTP_SETTINGS_CORRECT="سەپلىمە توغرا"
+INSTL_FTP_USER_DESC="ئاگاھلاندۇرۇش: تولدۇرماسلىقنى تەۋىسسىيە قىلىمىز، ھەر قېتىم ھۆججەت يوللىغاندا ئاندىن قولدا تولدۇرۇڭ!"
+INSTL_FTP_PASSWORD_DESC="ئاگاھلاندۇرۇش: تولدۇرماسلىقنى تەۋىسسىيە قىلىمىز، ھەر قېتىم ھۆججەت يوللىغاندا ئاندىن قولدا تولدۇرۇڭ!"
+
+;Site View
+INSTL_SITE="ئاساسىي سەپلىمە"
+INSTL_ADMIN_EMAIL_LABEL="ئېلخەت ئادرېسىڭىز"
+INSTL_ADMIN_PASSWORD_LABEL="سىستېما باشقۇرغۇچىسىنىڭ پارولى"
+INSTL_ADMIN_PASSWORD2_LABEL="سىستېما باشقۇرغۇچىسىنىڭ پارولىنى مۇئەييەنلەشتۈرۈش"
+INSTL_ADMIN_USER_LABEL="سىستېما باشقۇرغۇچىسىنىڭ قوللانغۇچى نامى"
+INSTL_SITE_NAME_TITLE="تور بېكەت نامى"
+INSTL_SITE_META_ADVANCED_SETTINGS="ئالىي سەپلىمە − تاللانما"
+INSTL_SITE_NAME_DESC="سىزنىڭ !Joomla تور بېكىتىڭىزنىڭ نامىنى كىرگۈزۈڭ"
+INSTL_SITE_METADESC_LABEL="مېتا (Meta) دىكى قىسقىچە چۈشەندۈرۈش"
+INSTL_SITE_METADESC_TITLE_LABEL="پۈتكۈل تور بېكىتىنىڭ تەسۋىرىنى تولدۇرۇڭ، بۇنى ئاساسلىقى ئىزدەش ماتورى ئىشلىتىدۇ. ئادەتتە 20 سۆزدىن ئېشىپ كەتمىگىنى ئەڭ مۇۋاپىق."
+INSTL_SITE_METAKEYS_LABEL="مېتا (Meta) دىكى ئاچقۇچلۇق سۆز"
+INSTL_SITE_METAKEYS_TITLE_LABEL="سىزنىڭ پۈتكۈل تور بېكىتىڭىزنى شەرھىلەپ بېرىدىغان ئاچقۇچلۇق سۆز ۋە ئىبارىلەرنى كىرگۈزۈڭ. ئىنگلىزچە قوش پەش ئارقىلىق ئاچقۇچلۇق سۆزنى، ئىنگلىزچە يالاڭ پەش ئاقىلىق ئىبارىلەرنى ئايرىڭ."
+INSTL_SITE_CONF_TITLE="باشقۇرغۇچىنىڭ ئېلخەت ئادرېسى ۋە پارولىنى مۇئەييەنلەشتۈرۈڭ"
+INSTL_SITE_CONF_DESC="ئېلخەت ئادرېسىڭىزنى يېزىڭ. بۇ بولسا تور بېكەت دەرىجىدىن تاشقىرى باشقۇرغۇچىسىنىڭ ئېلخەت ئادرېسى. <br />بىر پارول كىرگۈزۈڭ، ئاندىن كېيىن خاتا بولۇپ قالماسلىقى ئۈچۈن يەنە بىر قېتىم كىرگۈزۈڭ. سىز كۆڭۈلدىكى قوللانغۇچى نامى <strong>admin</strong> نى ئۆزگەرتىۋېتەلەيسىز. بۇ، قاچىلاش تامامالانغاندىن كېيىن ئارقا سۇپىغا كىرىشتە ئىشلىتىدىغان قوللانغۇچى نامىڭىز ۋە پارولىڭىزدۇر. <br /> ئەگەر سىز تور بېكىتىنى يۆتكىمەكچى بولسىڭىز، بۇ بۆلەكلەرنى نەزەرگە ئالمىسىڭىزمۇ بولىدۇ. سىستېما ئاپتوماتىك ھالدا زاپاس ماتېرىيالدىكى سەپلىمە قىممىتىنى ئىشلىتىدۇ."
+INSTL_SITE_LOAD_SAMPLE_TITLE="ئۈلگە سانلىق مەلۇماتىنى يۈكلەش"
+INSTL_SITE_LOAD_SAMPLE_DESC1="<span style="_QQ_"color:#F00"_QQ_"><strong>مۇھىم ئەسكەرتىش</strong>: !Joomla قوللانغۇچىسىنىڭ ئۈلگە سانلىق مەلۇماتىنى قاچىلىشىنى كۈچلۈك تەۋىسسىيە قىلىمىز. <strong>ئوڭ يۇقىرى بۇرجىكىدىكى &quot;كېيىنكى باسقۇچ&quot; نى چېكىشتىن بۇرۇن</strong>، &quot;ئۈلگە سانلىق مەلۇماتىنى قاچىلاش&quot; كۇنۇپكىسىنى چەكسىڭىزلا بولىدۇ!</span>"
+INSTL_SITE_LOAD_SAMPLE_DESC2="قاچىلاش تاماملىنىشتىن بۇرۇن، تور بېكەت ساندانىغا سانلىق مەلۇمات قاچىلىسىڭىز بولىدۇ، ئەمەلگە ئاشۇرۇشنىڭ تۆۋەندىكىدەك ئۈچ خىل شەكلى بار: "
+INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. كۆڭۈلدىكى ئۈلگە سانلىق مەلۇماتىنى </strong>ساندانغا قاچىلاشقا بولىدۇ. بۇ نۇقتىنى ئەمەلگە ئاشۇرۇش ئۈچۈن، ئىنگلىزچە (GB) ئۈلگە سانلىق مەلۇماتنىڭ تارتىلما تىزىملىكتە بولۇشىغا كاپالەتلىك قىلىڭ، &quot;ئۈلگە سانلىق مەلۇماتىنى قاچىلاش&quot; كۇنۇپكىسىنى چەكسىڭىزلا بولىدۇ."
+INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. ئۆزى بەلگىلەيدىغان ئۈلگە سانلىق مەلۇماتنى </strong>ساندانغا قاچىلاشقا بولىدۇ. بۇ نۇقتىنى ئەمەلگە ئاشۇرۇش ئۈچۈن، تارتىلما تىزىملىكتىن ئىشلىتىشكە بولىدىغان بىر ئۈلگە سانلىق مەلۇماتنى تاللاڭ، ئاندىن كېيىن &quot;ئۈلگە سانلىق مەلۇماتىنى قاچىلاش&quot; كۇنۇپكىسىنى چەكسىڭىزلا بولىدۇ."
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>2. ساپ (ئۈلگىسىز) قاچىلاش</strong>: ئەگەر سىز تور بېكىتىگە ھېچقانداق ئۈلگە مەزمۇنى قاچىلىغىڭىز يوق، سىستېمىنى يېڭىدىن قايتا قاچىلىماقچى بولسىڭىز، تور بېكەت ئادرېسى، سىستېما باشقۇرغۇچىسىنىڭ قوللانغۇچى نامى ۋە پارولىنى كىرگۈزۈڭ. ئاندىن كېيىن بىۋاسىتە <strong>ئوڭ يۇقىرى بۇرجەكتىكى &quot;كېيىنكى باسقۇچ&quot; </strong> نى چېكىپ ئەڭ ئاخىرقى باسقۇچقا ئۆتۈڭ."
+INSTL_SITE_OFFLINE_LABEL="بېكەت لېنىيىدە ئەمەس"
+INSTL_SITE_OFFLINE_TITLE_LABEL="قاچىلاش تاماملانغاندىن كېيىن ئالدى سۇپىنى لىنىيەدىن ئۈزۈلگەن ھالەتكە تەڭشەڭ، بۇ بېكەت بىرئازدىن كېيىن ئارقا سۇپىنىڭ پۈتكۈل جەريان تەڭشىكىدىن لىنىيەدىن ئۈزۈلگەن ھالەتنى بىكار قىلىۋېتىدۇ. "
+INSTL_SITE_SAMPLE_LABEL="ئۈلگە سانلىق مەلۇماتىنى قاچىلامسىز؟"
+INSTL_SITE_INSTALL_SAMPLE_LABEL="ئۈلگە سانلىق مەلۇماتىنى قاچىلاش"
+INSTL_SITE_INSTALL_SAMPLE_DESC="<span style="_QQ_"color:#F00"_QQ_">يېڭى ئۆگەنگۈچىلەرگە ئۈلگە سانلىق مەلۇماتىنى قاچىلاشنى كۈچلۈك تەۋىسسىيە قىلىمىز. بۇنىڭدا، بۇ joomla! قاچىلاش بوغچىسىدىكى تور بېكەت ئۈلگە مەزمۇنىنى قاچىلايدۇ.</span>"
+INSTL_SITE_SAMPLE_LOADED="ئۈلگە سانلىق مەلۇماتى ئوڭۇشلۇق قاچىلاندى."
+INSTL_SAMPLE_DATA_SET="كۆڭۈلدىكى ئېنگىلىزچە (GB) ئۈلگە سانلىق مەلۇماتى"
+
+;Complete view
+INSTL_COMPLETE="تامام"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="باشقۇرغۇچى تىزىملىتىپ چىقىشتا ئىشلتىدىغان ماتېرىيال"
+INSTL_COMPLETE_DESC1="&quot;تور بېكىتى&quot; كۇنۇپكىسىنى چېكىپ !Joomla بېكىتىڭىزگە زىيارەت قىلىڭ، ياكى &quot;ئارقا سۇپا باشقۇرۇش&quot; كۇنۇپكىسىنى چېكىپ ئارقا سۇپىغا كىرىپ بېكەتنى باشقۇرۇڭ."
+INSTL_COMPLETE_DESC2="!Joomla نىڭ ياردەم بېكىتىدە، سىز Joomla دا ئانا تىل بوغچىسىنى قاچىلاشنىڭ ئاددىي ۋە تەپسىلىي بولغان يېتەكچى ماتېرىيالىنى تاپالايسىز. سىز يەنە تىزمىدىن چۈشۈرۈشكە بولىدىغان تىل بوغچىسى ئۇلىنىشىنى كۆرەلەيسىز."
+INSTL_COMPLETE_DESC3="ئوڭ تەرەپتىكى كۇنۇپكىنى چېكىپ، يېڭى كۆزنەكتە ياردەم بېكىتىنى ئېچىڭ."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="قاچىلاش مۇنقدەرىجىسى ئۆچۈرۈلدى."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="قاچىلاش مۇندەرىجىسىنى ئۆچۈرۈشكە بولمىدى، قولدا ئۆچۈرۈڭ."
+INSTL_COMPLETE_FOLDER_REMOVED="قاچىلاش مۇندەرىجىسى ئوڭۇشلۇق ئۆچۈرۈلدى"
+INSTL_COMPLETE_LANGUAGE_1="!Joomla سىزنىڭ ئانا تىلىڭىزنى ئىشلەتتىمۇ؟"
+INSTL_COMPLETE_LANGUAGE_2="!Joomla ياردەم بېكىتىنى زىيارەت قىلسىڭىز، تېخىمۇ كۆپ ئۇچۇر ۋە چۈشۈرمىگە ئېرىشىسىز."
+INSTL_COMPLETE_REMOVE_FOLDER="قاچىلاش مۇندەرىجىسىنى ئۆچۈرۈش"
+INSTL_COMPLETE_REMOVE_INSTALLATION="يادىڭىزدا بولسۇن، قاچىلاش مۇندەرىجىسى (installation) نى تەلتۆكۈس ئۆچۈرىۋېتىڭ. <br />مۇندەرىجە &quot;installation&quot; ئۆچۈرۈلۈشتىن بۇرۇن، سىز داۋاملىق مەشغۇلات قىلالمايسىز. بۇ !Joomla نىڭ بىر تۈرلۈك بىخەتەرلىك ئىقتىدارى."
+INSTL_COMPLETE_TITLE="مۇبارەك بولسۇن! سىز Joomla تور بېكىتىڭىزنى ئوڭۇشلۇق قاچىلىدىڭىز!"
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="ساندانغا ئۇلاشقا بولمىدى. ئۇلاش قايتۇرما كودى %s"
+INSTL_DATABASE_COULD_NOT_REFRESH_MANIFEST_CACHE="بۇ كېڭەيتمىنىڭ manifest غەملىكىنى يېڭىلشقا بولمىدى: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="سانداننى زاپاسلاش جەريانىدا خاتالىق كۆرۈلدى."
+INSTL_DATABASE_ERROR_CREATE="ساندان قۇرۇۋاتقاندا %s خاتالىق كۆرۈلدى. <br />قوللانغۇچىنىڭ بەلكىم بىر ساندان قۇرۇشتا يېتەرلىك ھوقۇقى بولمىغان بولۇشى مۇمكىن. 在安装!Joomla نى قاچىلاشتىن بۇرۇن لازىملىق ساندانلار بەلكىم ئايرىم ئايرىم قۇرۇش كېرەك."
+INSTL_DATABASE_ERROR_DELETE="سانداننى ئۆچۈرۈش جەريانىدا خاتالىق كۆرۈلدى."
+INSTL_DATABASE_ERROR_INITIALISE_SCHEMA="نەشر نومۇرىنى دەسلەپلەشتۈرىۋاتقاندا خاتالىق كۆرۈلدى"
+INSTL_DATABASE_FIELD_VALUE_REMOVE="ئۆچۈرۈش"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="زاپاسلاش"
+INSTL_DATABASE_FIX_TOO_LONG="MySQL نىڭ جەدۋەل ئالدى قوشۇلغۇچى ئەڭ كۆپ بولغاندا 15 ھەرپ-بەلگىدىن ئېشىپ كەتمەسلىكى كېرەك."
+INSTL_DATABASE_INVALID_DB_DETAILS="تەمىنلىگەن ساندان ماتېرىيالى توغرا ئەمەس ياكى تولۇق ئەمەس."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="سىز MySQL 5.0.4 ياكى ئۇنىڭدىن يۇقىرى نەشر نۇسخىسىغا ئېھتىياجلىق، سىزدىكى نەشر نۇسخىسى: %s"
+INSTL_DATABASE_INVALID_TYPE="ساندان تىپىنى تاللاڭ"
+INSTL_DATABASE_NAME_TOO_LONG="MySQL نىڭ ساندان نامى ئەڭ كۆپ بولغاندا 64 ھەرپ-بەلگە بولىدۇ"
+INSTL_DATABASE_PREFIX_INVALID_CHARS="MySQL نىڭ جەدۋەل ئالدى قوشۇلغۇچىسى چوقۇم ھەرپ بىلەن باشلانغان، ئارقىدىكى ھەرپ-بەلگىلەر چوقۇم ھەرپ رەقەم ياكى ئاستى سىزىق بولغان بولۇشى كېرەك."
+INSTL_DATABASE_INVALID_NAME="MySQL 5.1.6 ئالدىدىكى نەشر نۇسخىلىرىدا، نامدا چېكىت ياكى باشقا  "_QQ_"ئالاھىدە"_QQ_" ھەرپ بەلگىلەرنى ئۆز ئىچىگە ئالماسلىقى مۇمكىن. سىزدىكى نەشر نۇسخىسى: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="MySQL ساندان نامى ياكى جەدۋەل نامى بوشلۇق بىلەن باشلىنىشقا ياكى بوشلۇق بىلەن ئاخىرلىشىشقا بولمايدۇ."
+INSTL_DATABASE_NAME_INVALID_CHAR="MySQL نىڭ بەلگىسى بولمىسىمۇ بىر NUL ASCII(0x00) كودىنى ئۆز ئىچىگە ئالسا بولىدۇ."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="%s ھۆججىتى مەۋجۇت ئەمەس"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="سىزنىڭ تور كۆرگۈچىڭىزدە Cookies قوزغىتىلمىغان. بۇ ئىقتىدارنى چەكلىۋەتسىڭىز، قاچىلانى تاماملاشقا بولمايدۇ. ياكى مۇلازىمېتىرنىڭ <strong>session ساقلاش يولى (session.save_path)</strong> دا مەسىلە كۆرۈلگەن. ئەگەر بۇ خىل ئەھۋالنى قانداق بىرتەرەپ قىلىشنى بىلمىسىڭىز، سىزنىڭ باش ئاپپارات تەمىنلەش سودىگىرىڭىز بىلەن ئالاقىلىشىڭ."
+INSTL_HEADER_ERROR="خاتالىق"
+
+;Helpers
+INSTL_PAGE_TITLE="!Joomla بېكىتىنى قاچىلاش پروگراممىسى"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="ساندانغا ئۇلاشقا بولمىدى. ئۇلاش قايتۇرما كودى: %s"
+INSTL_STD_OFFLINE_MSG="بېكەت ئاسرىلىۋاتىدۇ. <br /> بىرئازدىن كېيىن زىيارەت قىلىڭ."
+
+;Filesystem model
+INSTL_FTP_INVALIDROOT="كۆرسىتىلگەن FTP مۇندەرىجىسى joomla نىڭ قاچىلاش مۇندەرىجىسى ئەمەس"
+INSTL_FTP_NOCONNECT="FTP مۇلازىمېتىرىغا ئۇلاشقا مۇمكىن بولمىدى."
+INSTL_FTP_NODELE="FTP كوماندىسى "_QQ_"DELE"_QQ_" نى يوللاش مەغلۇپ بولدى."
+INSTL_FTP_NODIRECTORYLISTING="FTP مۇلازىمېتىرىدىكى مۇندەرىجە تىزمىسىغا ئېرىشكىلى بولمىدى. "
+INSTL_FTP_NOLIST="FTP كوماندىسى "_QQ_"LIST"_QQ_" نى يوللاش مەغلۇپ بولدى."
+INSTL_FTP_NOLOGIN="FTP مۇلازىمېتىرىغا ئۇلاشقا بولمىدى."
+INSTL_FTP_NOMKD="FTP كوماندىسى "_QQ_"MKD"_QQ_" نى يوللاش مەغلۇپ بولدى."
+INSTL_FTP_NONLST="FTP كوماندىسى "_QQ_"NLST"_QQ_" نى يوللاش مەغلۇپ بولدى."
+INSTL_FTP_NOPWD="FTP كوماندىسى "_QQ_"PWD"_QQ_" نى يوللاش مەغلۇپ بولدى."
+INSTL_FTP_NORETR="FTP كوماندىسى "_QQ_"RETR"_QQ_" نى يوللاش مەغلۇپ بولدى."
+INSTL_FTP_NORMD="FTP كوماندىسى "_QQ_"RMD"_QQ_" نى يوللاش مەغلۇپ بولدى."
+INSTL_FTP_NOROOT="كۆرسىتىلگەن FTP يولىنى ئوقۇپ ئېلىشقا بولمىدى"
+INSTL_FTP_NOSTOR="FTP كوماندىسى "_QQ_"STOR"_QQ_" نى يوللاش مەغلۇپ بولدى."
+INSTL_FTP_NOSYST="FTP كوماندىسى "_QQ_"SYST"_QQ_" نى يوللاش مەغلۇپ بولدى."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="FTP غول مۇندەرىجىسىنى ئاپتوماتىك تەكشۈرۈشكە بولمىدى."
+
+;others
+INSTL_ADVANCED_SETTINGS="ئالىي تەڭشەك"
+INSTL_BASIC_SETTINGS="ئاساسىي تەڭشەك"
+INSTL_CONFPROBLEM="سىزنىڭ سەپلىمە ھۆججىتىڭىز ياكى يولىڭىزنى يېزىشقا بولمايدۇ، ياكى سەپلىمە ھۆججەتنى قۇرۇش جەريانىدا خاتالىق كۆرۈلدى. سىز تۆۋەندىكى كودلارنى قولدا يوللىشىڭىز كېرەك. بۇ كودلارنى نامى configuration.php بولغان يېڭى ھۆججەتكە كوپىيەلەڭ، ھەمدە تور بېكىتىنىڭ غول مۇندەرىجىسى ئاستىغا يوللاڭ."
+INSTL_DATABASE_SUPPORT="ساندان قوللاش: "
+INSTL_DISPLAY_ERRORS="خاتالىقنى كۆرسىتىش: "
+INSTL_ERROR_DB="سانلىق مەلۇماتنى ساندانغا يېزىش جەريانىدا خاتالىق كۆرۈلدى: %s"
+INSTL_FILE_UPLOADS="ھۆججەت يوللاش"
+INSTL_GNU_GPL_LICENSE="GNU ئورتاق ئاممىۋى ھوقۇقى (2- نەشرى)"
+INSTL_INSTALLATION="قاچىلاش"
+INSTL_JSON_SUPPORT_AVAILABLE="JSON نى قوللاش"
+INSTL_LICENSE="يۇمشاق دېتال ئىجازەتنامىسى"
+INSTL_MAGIC_QUOTES_GPC="سېھىرلىك قوش پەش"
+INSTL_MAGIC_QUOTES_RUNTIME="سېھىرلىك قوللىنىش (Magic Quote)"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB تىلى كۆڭۈلدىكى قىلىپ بېكىتىلدى"
+INSTL_MB_STRING_OVERLOAD_OFF="MB String Overload نى ئېتىش"
+INSTL_NOTICEMBLANGNOTDEFAULT="PHP mbstring نىڭ نۆۋەتتىكى تەڭشىكى neutral ئەمەس. سىز تور بېكىتى غول مۇندەرىجىسىدىكى <code>.htaccess</code> ھۆججىتىگە <strong>php_value mbstring.language neutral</strong> نى قوشۇش ئارقىلىق تەڭشەشنى تاماملىيالايسىز"
+INSTL_NOTICEMBSTRINGOVERLOAD="PHP mbstring Overload قوزغىتىلغان قىلىپ بەلگىلەنگەن. سىز تور بېكىتىڭىزنىڭ غول مۇندەرىجىسىدىكى <code>.htaccess</code> ھۆججىتىگە<strong>php_value mbstring.func_overload 0</strong> نى قوشۇش ئارقىلىق ئۇنى ئېتەلەيسىز"
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />قاچىلاش جەريانىنى داۋاملاشتۇرالايسىز، سەپلىمە پارامېترى ئەڭ ئاخىرىدا كۆرسىتىلىدۇ. سىز چوقۇم بۇ كودلارنى قولدا يوللىشىڭىز كېرەك. بۇ كودلارنى تېكىست ھۆججىتىگە كوپىيەلەپ ساقلاڭ ھەمدە بۇ ھۆججەتكە &quot;configuration.php&quot; دەپ نام بېرىڭ، ئاندىن كېيىن تور بېكىتى غول مۇندەرىجىسىگە يوللاڭ."
+INSTL_OUTPUT_BUFFERING="غەملەككە چىقىرىش (Output Buffering)"
+INSTL_PARSE_INI_FILE_AVAILABLE="INI Parser نى قوللاش"
+INSTL_PHP_VERSION="PHP نەشرى"
+INSTL_REGISTER_GLOBALS="پۈتكۈل بېكەت ئۆزگەرگۈچىسى"
+INSTL_SAFE_MODE="بىخەتەر شەكلى"
+INSTL_SESSION_AUTO_START="Session نى ئاپتوماتىك ئېچىش"
+INSTL_WRITABLE="يېزىشقا بولىدۇ"
+INSTL_XML_SUPPORT="XML نى قوللاش"
+INSTL_ZIP_SUPPORT_AVAILABLE="يەرلىك ZIP نى قوللاش"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Zlib پىرىسىنى قوللاش"
+
+;Global strings
+JADMINISTRATOR="ئارقا سۇپا باشقۇرۇش"
+JADVANCED="ئالىي"
+JCHECK_AGAIN="قايتا تەكشۈرۈش"
+JERROR="خاتا"
+JGLOBAL_ISFREESOFTWARE="%s بولسا<a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU ئورتاق ئاممىۋى ھوقۇقى</a>غا تەۋە ئەركىن يۇمشاق دېتال"
+JINVALID_TOKEN="ئەڭ يېقىن فورما تاپشۇرۇش، ئىناۋەتسىز دەلىل سانلىق مەلۇماتىنى ئۆز ئىچىگە ئالغاچقا تاپشۇرۇش رەت قىلىندى. بەتنى يېڭىلىغاندىن كېيىن قايتا بىر سىناڭ."
+JNEXT="كېيىنكى باشقۇچ"
+JNO="ياق"
+JOFF="ئېتىك"
+JON="ئوچۇق"
+JPREVIOUS="ئالدىنقى باسقۇچ"
+JSITE="تور بېكەت"
+JUSERNAME="قوللانغۇچى نامى"
+JYES="ھەئە"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="MySQL ساندانىغا ئۇلاشقا مۇمكىن بولمىدى."
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="ساندان قوزغاتقۇچىنى يۈكلەشكە بولمىدى: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="سىزنىڭ دىيالوگىڭىزنىڭ ۋاقتى ئۆتتى، بەتنى قايتىدىن يېڭىلاڭ."
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="چوقۇم تولدۇرىدىغان فورما تۈرى: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="ئىناۋەتسىز فورما تۈرى: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: ساندانغا ئۇلاشقا بولمىدى <br />joomla.library: %1$s - %2$s"
+
+;Necessary for errors
+ADMIN_EMAIL="ئېلخەت ئادرېسىڭىز"
+ADMIN_PASSWORD="سىستېما باشقۇرغۇچىسىنىڭ پارولى"
+ADMIN_PASSWORD2="سىستېما باشقۇرغۇچىسىنىڭ پارولىنى مۇئەييەنلەشتۈرۈش"
+SITE_NAME="بېكەت نامى"
