@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
+<metafile
+	version="2.5"
+	client="installation">
+	<name>Uyghur (ئۇيغۇرچە)</name>
+	<version>2.5</version>
+	<creationDate>2012.1.28</creationDate>
+	<author>Joomla! Uyghur Translation Team</author>
+	<copyright>Copyright (C) 2005 - 2012 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<description>!Joomla 2.5 قاچىلاش پىروگراممسىنىڭ ئۇيغۇرچە تەرجىمىسى</description>
+	<files>
+		<filename>ug-CN.ini</filename>
+	</files>
+	<metadata>
+		<name>Uyghur (ئۇيغۇرچە)</name>
+		<tag>ug-CN</tag>
+		<rtl>1</rtl>
+	</metadata>
+	<params />
+</metafile>
