@@ -26,6 +26,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+31-Jan-2012 Jean-Marie Simonet
+ $ Adding new installation language ug-CN
+
 30-Jan-2012 Christophe Demko
  # [#27885] TinyMCE settings in SQL don't reflect recent changes in options. (Andrea Tarr, Elin Waring)
 
